Add the ingredients & steps/Finish lasagna

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
-    <img src="../images/lasagna.jpg" alt="finished lasagna" height="400" width="400"/>
+    <img src="../images/lasagna.jpg" alt="finished lasagna" height="300" width="300"/>
     <h3>Description</h3>
     <p>
         Making lasagna can be time-consuming, but the results are well worth the wait.<br> 
@@ -19,5 +19,26 @@
         recipe because it's incredibly customizable,<br>
         so you can easily alter the ingredient list to suit your needs.
     </p>
+    <h3>Ingredient</h3>
+    <ul>
+        <li>Meat</li>
+        <li>Onion and Garlic</li>
+        <li>Tomato Products</li>
+        <li>Sugar</li>
+        <li>Spices and Seasonings</li>
+        <li>Lasagna noodles</li>
+        <li>Cheeses</li>
+        <li>Egg</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Make the meat sauce</li>
+        <li>Cook the noodles</li>
+        <li>Make the ricotta mixture</li>
+        <li>Layer the lasagna according to the recipe instructions</li>
+        <li>Cover with foil</li>
+        <li>Let the lasagna rest</li>
+    </ol>
+
 </body>
 </html>
