--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/garlicBread.html">Garlic Bread Recipe</a></li>
-        <li><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="recipes/tacos.html">Tacos Recipe</a></li>
+    <h1 class="title">Odin Recipes</h1>
+    <ul class="recipes_list">
+        <li class="link"><a href="recipes/garlicBread.html">Garlic Bread Recipe</a></li>
+        <li class="link"><a href="recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li class="link"><a href="recipes/tacos.html">Tacos Recipe</a></li>
     </ul>
     
 </body>
